--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgptrn",
+  "name": "aichatbot",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~48.0.11",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-gifted-chat": "^2.0.1",
+    "react-native-safe-area-context": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
